# airterm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PRODUCT_PLAN.md  PROGRESS.md  README.md  TASK_PLAN.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  release.yml
apps/mac/: Package.swift
apps/mac/.build/: plugin-tools.yaml
apps/mac/AirTerm/: AirTermApp.swift  AppState.swift
apps/mac/AirTerm/Agent/: AccessibilityAdapter.swift  AgentAdapter.swift  SubprocessAdapter.swift
apps/mac/AirTerm/App/: AirTermApp.swift  AppDelegate.swift
apps/mac/AirTerm/Config/: ChromeTheme.swift  Config.swift  ConfigStore.swift  TOML.swift  Theme.swift
apps/mac/AirTerm/Models/: PairInfo.swift  Session.swift  TerminalEvent.swift  (+1 more)
apps/mac/scripts/: bundle.sh  dmg.sh
apps/server/: .dockerignore  .env.example  Dockerfile  fly.toml  package.json
apps/server/src/: config.ts  index.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/public/: _headers  manifest.json  manifest.webmanifest
apps/web/src/: App.tsx  main.tsx
design/: airterm.pen
docs/: PROGRESS.md  ROADMAP.md  THEMES.md  architecture.md  deployment.md  development.md  implementation-plan.md  prd.md  privacy.md  protocol.md  security-audit.md  security.md  ui-design.md
scripts/: debug-discovery.swift  mock-mac.ts
tools/airprompt/: Cargo.toml
tools/airprompt/presets/: README.md  gruvbox-rainbow.toml  jetpack.toml  minimal.toml  pastel-powerline.toml  tokyo-night.toml
tools/airprompt/src/: cli.rs  config.rs  main.rs  render.rs  shell_init.rs
tools/airprompt/src/modules/: character.rs  command_duration.rs  directory.rs  git_branch.rs  git_status.rs  mod.rs  status.rs  style.rs  time.rs
(+511 files in other folders)
